# Legal-AI-Lex-Assistant

./: .gitignore  LICENSE  README.md  example.env  project_requirements.md
rag-demo/: Dockerfile  README.md  create_templates.py  how-to-run.md  luat_merged_dataset.json  prompt_lex_system.md  pyproject.toml  requirements.txt
rag-demo/eval_output/: judge_result_fixed.json  ragas_result.csv  ragas_result_summary.json
rag-demo/infra/: docker-compose.yaml
rag-demo/public/: custom.css
rag-demo/src/: chainlit_app.py  config.py  evaluation.py  main.py  test-ingestion.py
rag-demo/src/admin_ui/: app.py
rag-demo/src/admin_ui/web/: index.html  package-lock.json  package.json  walkthrough-admin-ui.md
rag-demo/src/admin_ui/web/src/: App.jsx  index.css
rag-demo/src/api/: auth_routes.py  conversation_routes.py  docgen_routes.py  routes.py  schemas.py
rag-demo/src/auth/: data_layer.py  database.py  security.py
rag-demo/src/chat_ui/web/: index.html  package-lock.json  package.json
rag-demo/src/core/: database.py  db_init.py  logger.py
rag-demo/src/data/: bm25_vocab.json  documents.py
rag-demo/src/docgen/: generator.py  intent_detector.py  template_registry.py
rag-demo/src/embedding/: bm25_en.py  embedding.py
rag-demo/src/generator/: llm_generator.py
rag-demo/src/ingestion/: __init__.py  chunking.py  loading.py  pipeline.py  preprocessing.py  qdrant_store.py
rag-demo/src/retrieval/: query_analyzer.py  reranker.py  retriever.py  vector_store.py
rag-demo/templates/: don_khieu_nai.docx  don_khoi_kien.docx  don_ly_hon.docx
(+26 files in other folders)
