[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "chainlit>=2.10.0",
    "datasets>=4.8.3",
    "docling>=2.81.0",
    "docxtpl>=0.20.2",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "markitdown[all]>=0.1.5",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "underthesea>=9.2.11",
    "uvicorn[standard]>=0.42.0",
]
